[package]
name = "component-system-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
html-macro = "0.2.2"
html-to-string-macro = "0.2.5"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

